# PrefabPrebuildLibrary

./: gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
mylib/: build.gradle
mylib/externalDependency/include/: externalLibrary.h
mylib/src/androidTest/java/com/example/mylib/: ExampleInstrumentedTest.java
mylib/src/main/cpp/: CMakeLists.txt  mylib.cpp
mylib/src/main/cpp/myInternalLibrary/include/: internalLibrary.h
mylib/src/main/cpp/myInternalLibrary/src/: internalLibrary.cpp
mylib/src/main/java/com/example/mylib/: myJavaClass.java
